syntax = "proto3";

option go_package = "proto/login";

service LoginService {
  rpc GreetFromLogin(Request) returns (Response) {}
  rpc GreetFromLoginTest(Request) returns (Response) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc UpdateUser(UpdateRequest) returns (UpdateResponse){}
  rpc DeleteUser(DeleteRequest) returns (DeleteResponse){}
  rpc GetUser(RequestGetUser) returns (ResponseGetUser) {}
}

message DeleteRequest {
  string dlt = 3;
}
message DeleteResponse {
  string dlt = 4;
}

message UpdateRequest {
  UpdateInfo reg = 3;
}
message UpdateResponse {
  UpdateInfo reg = 4;
}
message UpdateInfo {
        string id = 1;
        string name = 2;
        string surname = 3;
        string username = 4;
        string password = 5;
        string email = 6;
}
message RequestGetUser {
  string usr = 3;
}
message ResponseGetUser {
  UserInfo usr = 4;
}
message UserInfo {
        string id = 2;
        string name = 3;
        string surname = 4;
        string username = 5;
        string password = 6;
        string email = 7;
}

message LoginRequest {
  LoginInfo logg = 3;
}
message LoginResponse {
  string token = 4;
}
message LoginInfo {
        string username = 3;
        string password = 4;
}

message Request {
  string name = 1;
}

message Response {
  string greeting = 2;
}

message CreateUserRequest {
  User reg = 3;
}
message CreateUserResponse {
  User reg = 4;
}
message User {
        string id = 1;
        string name = 2;
        string surname = 3;
        string username = 4;
        string password = 5;
        string email = 6;
}